--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -61,7 +61,7 @@
       he first formulated his theory about <em>mimetic desire</em>, based on an analysis
       of novels by Cervantes, Flaubert, Stenhal, Proust and Dostoyevski.
       His second major work, <i class="booktitle" lang="fr">La Violence et le sacré</i> (1972)
-      is the consequence of thinking through the consequences of mimesis for early human societies.
+      is the result of thinking through the consequences of mimesis for early human societies.
       This led to the formulation of his theory about the role of the <em>scapegoat mechanism</em> in the 
       emergence of human culture and religion.
       His 1978 book <i class="booktitle" lang="fr">Des choses cachées depuis la fondation du monde</i> (1978)
@@ -70,7 +70,7 @@
       Several other books followed, including 
       <i class="booktitle" lang="fr">La route antique des hommes pervers</i> (1985),
       which focuses on the book of Job, and
-      <i class="booktitle">A Theatre of Envy: William Shakespeare</i> (1991),
+      <i class="booktitle">A Theater of Envy: William Shakespeare</i> (1991),
       in which he shows that Shakespeare was aware of the mechanisms of mimesis
       and scapegoating.
     </p>
@@ -118,6 +118,14 @@
         Its entire website is in Dutch.
       </li>
       <li>
+        <a href="http://home.nordnet.fr/~jpkornobis/index.html" lang="fr" hreflang="fr">Site Violence et Sacré</a>,
+        website by <span lang="fr">Jean-Paul Kornobis</span>.
+      </li>
+      <li>
+        <a href="http://www.cottet.org/girard/" lang="fr" hreflang="fr">René Girard</a>,
+        website by <span lang="fr">Philippe Cottet</span>.
+      </li>
+      <li>
         <a href="http://www.anthropoetics.ucla.edu/home.html" class="journal">Anthropoetics: The Journal of Generative Anthropology</a>
         is an Open Access journal that took is starting point from 
         Girar's theory about the origin of human culture.
@@ -129,13 +137,14 @@
     <h2>Books</h2>
     <ul>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">Mensonge romantique et vérité romanesque</i>. 1961.
+        <strong class="booktitle">Mensonge romantique et vérité romanesque</strong>. Grasset, 1961.
+        <a href="http://www.grasset.fr/mensonge-romantique-et-verite-romanesque-9782246004073"><abbr>ISBN</abbr> 9782246004073</a>. 
         <br /><span lang="en">Girard's first book analyses novels by Cervantes,
         Flaubert, Stendahl and Dostoyevsky,
         and formulates his theory of mimetic desire.</span>
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">Dostoïevski&nbsp;: du double à l’unité</i>. 1963.
+        <i class="booktitle">Dostoïevski&nbsp;: du double à l’unité</i>. Gérard Monfort, 1963.
         <br /><span lang="en">An analysis of several of Dostoyevsky's novels,
         starting with <i class="booktitle">Notes from Underground</i>.
         This essay was later reprinted in </span>
@@ -143,7 +152,8 @@
         <span lang="en">(see below).</span>
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">La Violence et le sacré</i>. 1972. 
+        <strong class="booktitle">La Violence et le sacré</strong>. Grasset, 1972. 
+        <a href="http://www.grasset.fr/la-violence-et-le-sacre-9782246000518"><abbr>ISBN</abbr> 9782246000518</a>. 
         <br /><span lang="en">In his third book, Girard looks for mimesis 
         in myths and older literary texts (especially
         <a href="https://en.wikipedia.org/wiki/Greek_tragedy">Greek tragedy</a>)
@@ -151,7 +161,7 @@
         human culture and religion.</span>
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">Critique dans un souterrain</i>. 1976. 
+        <i class="booktitle">Critique dans un souterrain</i>. L'Âge d'Homme, 1976. 
         <br /><span lang="en">Contains his earlier text on Dostoyevsky,
         a discussion of Albert Camus and a critique of 
         Gilles Deleuze and Félix Guattari's 
@@ -159,11 +169,12 @@
         lang="fr" hreflang="en"> L'anti-Oedipe</a>.</span>
       </li>
       <li><span lang="fr">Girard, René</span>: 
-        <i class="booktitle">To Double Business Bound: Essays on Literature, Mimesis, and Anthropology</i>. 1978.
+        <i class="booktitle">To Double Business Bound: Essays on Literature, Mimesis, and Anthropology</i>. Johns Hopkins University Press, 1978.
         <br />A collection of nine articles and an interview.
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">Des choses cachées depuis la fondation du monde: Recherches avec Jean-Michel Oughourlian et Guy Lefort</i>. 1978.
+        <i class="booktitle"><strong>Des choses cachées depuis la fondation du monde</strong>: Recherches avec Jean-Michel Oughourlian et Guy Lefort</i>. Grasset, 1978.
+        <a href="http://www.grasset.fr/des-choses-cachees-depuis-la-fondation-du-monde-9782246618416"><abbr>ISBN</abbr> 9782246618416</a>. 
         <br /><span lang="en">This book consists of conversations between 
         René Girard and the psychiatrists Jean-Michel Oughourlian and Guy Lefort.
         Girard clarifies certain parts of <i class="booktitle">La Violence et le sacré</i>
@@ -171,7 +182,8 @@
         as a book that unveils and denounces scapegoating mechanisms.
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">Le Bouc émissaire</i>. 1982.
+        <i class="booktitle">Le Bouc émissaire</i>. Grasset, 1982.
+        <!--a href=""><abbr>ISBN</abbr> </a>.--> 
         <br /><span lang="en">Much of this book discusses 
         the persecution of victims or scapegoats in medieval texts.
         According to 
@@ -180,18 +192,24 @@
         </span>
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">La Route antique des hommes pervers</i>. 1985.
+        <i class="booktitle">La Route antique des hommes pervers</i>. Grasset, 1985.
+        <a href="http://www.grasset.fr/la-route-antique-des-hommes-pervers-9782246351115"><abbr>ISBN</abbr> 9782246351115</a>. 
         <br /><span lang="en">About the book of
         <a href="https://en.wikipedia.org/wiki/Job_%28biblical_figure%29" class="booktitle">Job</a>.
         </span>
       </li>
       <li>Hamerton-Kelly, Robert, ed.: 
-        <i class="booktitle">Violent Origins: Walter Burkert, René Girard, and Jonathan Z. Smith on Ritual Killing and Cultural Formation</i>. 1978.
+        <i class="booktitle">Violent Origins: Walter Burkert, René Girard, and Jonathan Z. Smith on Ritual Killing and Cultural Formation</i>. Stanford University Press, 1987.
+        <br />French translation: 
+        <span lang="fr">Girard, René</span>:
+        <i class="booktitle">Sanglantes origines. Entretiens avec Walter Burkert, Renato Rosaldo et Jonathan Z. Smith</i>. Flammarion, 2011, 2013.
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=45094"><abbr>ISBN</abbr> 9782081289529</a>. 
       </li>
-      <li lang="fr">Girard, René: 
-        <i class="booktitle">Shakespeare&nbsp;: les feux de l'envie</i>. 1990.
-        <i class="booktitle" lang="en">A Theater of Envy: Shakespeare</i>.
-        <span lang="en">This book consists mostly of journal articles that Girard had
+      <li><span lang="fr">Girard, René</span>: 
+        <strong class="booktitle">A Theater of Envy: Shakespeare</strong> Oxford University Press, 1991.
+        <br />French translation: <i class="booktitle" lang="fr">Shakespeare&nbsp;: les feux de l'envie</i>. Grasset, 1990.
+        <a href="http://www.grasset.fr/shakespeare-les-feux-de-lenvie-9782246249917"><abbr>ISBN</abbr> 9782246249917</a>. 
+        <br />This book is based on journal articles that Girard had
         published in the 1970s and 1980s.<!-- @@check -->
         Girard shows that Shakespeare understood mimetic desire, even in early works such as 
         <i class="booktitle">The Two Gentlemen of Verona</i> and <i class="booktitle">The Rape of Lucrece</i>.
@@ -199,12 +217,118 @@
         However, according to Girard, Shakespeare chose to hint at these behavioural mechanisms
         in subtext rather than discussing them openly.
       </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Quand ces choses commenceront &hellip;</i>. Arléa, 1994.
+        <br />A book of interviews with Michel Tréguer.<!-- @@check -->
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Je vois Satan tomber comme l'éclair</i>. Grasset, 1999.
+        <a href="http://www.grasset.fr/je-vois-satan-tomber-comme-leclair-9782246267911"><abbr>ISBN</abbr> 9782246267911</a>. 
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Celui par qui le scandale arrive</i>. Desclée de Brouwer, 2001.
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">La voix méconnue du réel</i>. Grasset, 2002.
+        <a href="http://www.grasset.fr/la-voix-meconnue-du-reel-9782246611011"><abbr>ISBN</abbr> 9782246611011</a>. 
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Le Sacrifice</i>. Conférences del Duca. Paris: Bibliothèque nationale de France, 2003.
+        <abbr>ISBN</abbr> 978-2-7177-2263-5.
+        <br /><span lang="en">English translation:
+        <i class="booktitle">Sacrifice</i>. Translated by Matthew Patillo and David Dawson. Breakthroughs in Mimetic Theory Series. Michigan State University Press, 2011.
+        <abbr>ISBN</abbr> 978-0-87013-992-5.
+        </span>
+        <br /><span lang="en">Short book about sacrifice in vedic religion.</span>
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Les Origines de la culture</i>. <span lang="fr">entretiens avec Pierpaolo Antonello et João César de Castro Rocha, suivi d’une réponse à Régis Debray sur ses critiques publiées dans Le feu sacré en 2003</span> 2004.
+        <!-- @@ISBN -->
+      </li>
+      <li><span lang="fr">Girard, René</span>: 
+        <i class="booktitle">Oedipus Unbound: Selected Writings on Rivalry and Desire</i>, edited by Mark Anspach. Oxford University Press <!-- @@year -->.
+        <!-- @@ISBN -->
+      </li>
+      <li><span lang="fr">Girard, René</span>; <span lang="it">Vattimo, Gianni</span>: 
+        <i class="booktitle" lang="et">Verità o fede debole. Dialogo su cristianesimo e relativismo</i>, edited by <span lang="it">P. Antonello. Transeuropa Edizioni</span>, 2006. 
+        <!-- @@ISBN -->
+        <br />French translation:
+        <i class="booktitle" lang="fr">Vérité ou foi faible. Dialogue sur christianisme et relativisme</i> <!-- @@publisher, year -->
+      </li>
+      <li lang="fr">Girard, René; Gounelle, André; Houziaux, Alain: 
+        <i class="booktitle">Dieu, une invention ?</i>. <!-- @@publisher --> 2007.
+        <!-- @@ISBN -->
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">De la violence à la divinité</i>. Grasset, 2007.
+        <a href="http://www.grasset.fr/de-la-violence-la-divinite-9782246721116"><abbr>ISBN</abbr> 9782246721116</a>. 
+        <span lang="en">Contains
+          <i class="booktitle" lang="fr">Mensonge romantique et vérité romanesque</i>,
+          <i class="booktitle" lang="fr">La violence et le sacré</i>,
+          <i class="booktitle" lang="fr">Des choses cachées depuis la fondation du monde</i> and
+          <i class="booktitle" lang="fr">Le bouc émissaire</i>.
+        </span>
+      </li>
+      <li lang="fr">Girard, René; Serres, Michel: 
+        <i class="booktitle">Le Tragique et la Pitié</i>. Le Pommier, 2007.
+      </li>
+      <li lang="fr">Girard, René; Chantre, Benoît: 
+        <i class="booktitle">Achever Clausewitz</i>. Carnets nord, 2007. Flammarion, 2011.<!-- @@check -->
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=39193"><abbr>ISBN</abbr> 9782081226395</a>. 
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Anorexie et désir mimétique</i>. Paris: Éditions de L'Herne, 2008.
+      </li>
+      <li><span lang="fr">Girard, René</span>: 
+        <i class="booktitle">Mimesis and Theory: Essays on Literature and Criticism, 1953-2005</i>. Edited and with an introduction by Robet Doran. 
+        Cultural Memory in the Present. Stanford, California: Stanford University Press, 2008.
+        <abbr>ISBN</abbr> 978-0-8047-8107-7.
+        <br />This is a collection of 20 essays, seven of which were originally written in French.
+        The essays cover French authors such as <span lang="fr">Saint-John Perse, Valéry, Stendhal, Simone de Beauvoir,
+        Marcel Proust, Jean Racine, Victor Hugo</span> and <span lang="fr">Chrétien de Troyes</span>;
+        it also contains essays on Dostoyevsky and Shakespeare.
+      </li>
+      <li lang="fr">Girard, René; <span lang="it">Vattimo, Gianni; Antonello, Pierpaolo</span>: 
+        <i class="booktitle">Christianisme et modernité</i>. Flammarion, 2009, 2014.
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=46922"><abbr>ISBN</abbr> 9782081307773</a>. 
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Géométries du désir</i>. Textes traduits de l'anglais par Mark R. Anspach et Myriam Dennehy. Paris: Éditions de L'Herne, 2010.
+        <abbr>ISBN</abbr> 978-2-85197-922-3.
+        <br /><span lang="en">This is a collection of reprints and translations of articles: 
+        &ldquo;Love and Hate in <i class="booktitle">Yvain</i>&rdquo; (B. Cazelles &amp; Ch. Méla, eds.: <i class="booktitle">Modernité au Moyen Âge: le défi du passé</i>. Geneva: Droz, 1990),
+        <span lang="fr">&ldquo;De la <i class="booktitle">Divine Comédie</i> à la sociologie du roman&rdquo; (<i class="journal">Revue de l'institut de sociologie</i></span>, Brussels, 1963/2),
+        an excerpt from <i class="booktitle">Shakespeare et l'excès. Actes du Congrès organisé par la Société française Shakespeare</i> (15-17 March 2007),
+        <span lang="fr">&ldquo;Racine, poète de la gloire&rdquo; (<i class="journal">Critique</i></span> 205, June 1964),
+        &ldquo;Marivaudage and Hypocrisy&rdquo; (<i class="journal">American Society of the French Legion of Honor Magazine</i> 34.3, 1963),
+        &ldquo;The Role of Eroticism in Malraux's Fiction&rdquo; (<i class="journal">Yale French Studies</i> 11, 1953),
+        &ldquo;Pride and Passion in the Contemporary Novel&rdquo; (<i class="journal">Yale French Studies</i> 24, 1960).</span>
+      </li>
+      <li><span lang="fr">Girard, René</span>: 
+        <i class="booktitle" lang="de">Gewalt und Religion: Ursache oder Wirkung?</i>
+        <span lang="de">Herausgegeben, mit zwei Gesprächen und einem Nachwort von Wolfgang Palaver. Berlin: Matthes &amp; Seitz</span>, 2010.
+        <abbr>ISBN</abbr> 978-3-88221-632-5.
+        <br />This book consists of an introduction by René Girard (a lecture at the University of Virginia from November 2003),
+        a conversation that was originally published in <i class="journal" lang="de">Sinn und Form</i> in 2001,
+        another conversation that was originally published in <i class="journal" lang="de">Sinn und Form</i> in 2007
+        and an afterword by <span lang="de">Wolfgang Palaver</span>.
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">La conversion de l'art</i>. Paris: Carnets nord, 2009. Flammarion, 2010.
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=38324"><abbr>ISBN</abbr> 9782081226401</a>.
+        <span lang="en">Book accompanied with a <abbr>DVD</abbr>.</span>
+      </li>
       <!--li lang="fr">Girard, René: 
-        <i class="booktitle">Quand ces choses commenceront</i>. 1994.
-        <br />A book of interviews with Michel Tréguer.
+        <i class="booktitle"></i>. .
+        <a href=""><abbr>ISBN</abbr> </a>. 
       </li-->
     </ul>
 
+    <!-- Other books:
+      Michel Deguy & Jean-Pierre Dupuy, eds.: René Girard et le problème du mal. Grasset, 1982. ISBN 9782246249719. http://www.grasset.fr/rene-girard-et-le-probleme-du-mal-9782246249719 
+        Collection of essays; also contains biography & bibliography of René Girard.
+      Paul Dumouche, ed.: Colloque de Cerisy: Violence et vérité - Autour de René Girard. Grasset, 1985. ISBN 9782246337218. http://www.grasset.fr/violence-et-verite-autour-de-rene-girard-9782246337218 
+    -->
     <!--h2>Obituaries</h2-->
     <!-- @@todo -->
     <!-- France Culture: Jean-Michel Oughourlian: Hommaga à René Girard: http://www.franceculture.fr/emission-les-nouveaux-chemins-de-la-connaissance-hommage-a-rene-girard-jean-michel-oughourlian-2015- -->
