Girard: books: ISBN & translations.

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -52,7 +52,11 @@
       In addition to literature and philosophy, his work is also relevant philosophical anthropology, 
       psychology and economics (although he did not publish in all these areas).
       His work is based on the analysis of literary and religious texts, not on 
-      actual research in psychology or anthropology (<abbr>i.e.</abbr> no field research).
+      actual research in psychology or anthropology 
+      (<abbr>i.e.</abbr> no 
+      <a href="https://en.wikipedia.org/wiki/Experimental_psychology">psychological experiments</a>,
+      <a href="https://en.wikipedia.org/wiki/Ethnohistory">ethnohistoric research</a> or 
+      <a href="https://en.wikipedia.org/wiki/Ethnography">ethnographic research</a>)
     </p>
     <p>
       After writing a <abbr>PhD</abbr> dissertation in history, he moved from France to the United States,
@@ -119,16 +123,18 @@
       </li>
       <li>
         <a href="http://home.nordnet.fr/~jpkornobis/index.html" lang="fr" hreflang="fr">Site Violence et Sacré</a>,
-        website by <span lang="fr">Jean-Paul Kornobis</span>.
+        French website by <span lang="fr">Jean-Paul Kornobis</span>.
+        An <a href="http://home.nordnet.fr/~jpkornobis/index1.html">English version of the home page</a>
+        is also available, but the rest of the site has not been translated.
       </li>
       <li>
         <a href="http://www.cottet.org/girard/" lang="fr" hreflang="fr">René Girard</a>,
-        website by <span lang="fr">Philippe Cottet</span>.
+        French website by <span lang="fr">Philippe Cottet</span>.
       </li>
       <li>
         <a href="http://www.anthropoetics.ucla.edu/home.html" class="journal">Anthropoetics: The Journal of Generative Anthropology</a>
         is an Open Access journal that took is starting point from 
-        Girar's theory about the origin of human culture.
+        Girard's theory about the origin of human culture.
         Eric Gans, who started the journal, also wrote
         <a href="http://www.anthropoetics.ucla.edu/gaintro.htm">A Brief Introduction to Generative Anthropology</a>.
       </li>
@@ -180,10 +186,18 @@
         Girard clarifies certain parts of <i class="booktitle">La Violence et le sacré</i>
         and formulates his theory about the <i class="booktitle">New Testament</i> 
         as a book that unveils and denounces scapegoating mechanisms.
+        <br />
+        Translations:</span>
+        <ul>
+          <li lang="en"><i class="booktitle">Things Hidden Since the Foundation of the World</i>, translated by Stephen Bann and Michael Metteer.
+            Stanford University Press, 1987. 
+            <a href="http://www.sup.org/books/title/?id=2670"><abbr>ISBN</abbr> 9780804722155</a>.
+          </li>
+        </ul>
       </li>
       <li lang="fr">Girard, René: 
         <i class="booktitle">Le Bouc émissaire</i>. Grasset, 1982.
-        <!--a href=""><abbr>ISBN</abbr> </a>.--> 
+        <a href="http://www.grasset.fr/le-bouc-emissaire-9782246267812"><abbr>ISBN</abbr> 9782246267812</a>. 
         <br /><span lang="en">Much of this book discusses 
         the persecution of victims or scapegoats in medieval texts.
         According to 
@@ -196,14 +210,24 @@
         <a href="http://www.grasset.fr/la-route-antique-des-hommes-pervers-9782246351115"><abbr>ISBN</abbr> 9782246351115</a>. 
         <br /><span lang="en">About the book of
         <a href="https://en.wikipedia.org/wiki/Job_%28biblical_figure%29" class="booktitle">Job</a>.
-        </span>
+        <br />Translations:</span>
+        <ul>
+          <li><i class="booktitle">Job: The Victim of His People</i>. Translated by Yvonne Freccero. Stanford University Press, 1987.
+            <a href="http://www.sup.org/books/title/?id=2669"><abbr>ISBN</abbr> 9780804714044</a>.
+          </li>
+        </ul>
       </li>
       <li>Hamerton-Kelly, Robert, ed.: 
         <i class="booktitle">Violent Origins: Walter Burkert, René Girard, and Jonathan Z. Smith on Ritual Killing and Cultural Formation</i>. Stanford University Press, 1987.
-        <br />French translation: 
-        <span lang="fr">Girard, René</span>:
-        <i class="booktitle">Sanglantes origines. Entretiens avec Walter Burkert, Renato Rosaldo et Jonathan Z. Smith</i>. Flammarion, 2011, 2013.
-        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=45094"><abbr>ISBN</abbr> 9782081289529</a>. 
+        <a href="http://www.sup.org/books/title/?id=2717"><abbr>ISBN</abbr> 9780804715188</a>.
+        <br />Translations:
+          <ul>
+            <li>
+              <span lang="fr">Girard, René</span>:
+              <i class="booktitle">Sanglantes origines. Entretiens avec Walter Burkert, Renato Rosaldo et Jonathan Z. Smith</i>. Flammarion, 2011, 2013.
+              <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=45094"><abbr>ISBN</abbr> 9782081289529</a>. 
+            </li>
+          </ul>
       </li>
       <li><span lang="fr">Girard, René</span>: 
         <strong class="booktitle">A Theater of Envy: Shakespeare</strong> Oxford University Press, 1991.
@@ -218,8 +242,9 @@
         in subtext rather than discussing them openly.
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">Quand ces choses commenceront &hellip;</i>. Arléa, 1994.
-        <br />A book of interviews with Michel Tréguer.<!-- @@check -->
+        <i class="booktitle">Quand ces choses commenceront &hellip;</i>. Arléa, 1996.
+        <a href="http://www.arlea.fr/QUAND-LES-CHOSES-COMMENCERONT"><abbr>ISBN</abbr> 9782869593008</a>. 
+        <br />A book of interviews with Michel Treguer.
       </li>
       <li lang="fr">Girard, René: 
         <i class="booktitle">Je vois Satan tomber comme l'éclair</i>. Grasset, 1999.
@@ -242,22 +267,28 @@
         <br /><span lang="en">Short book about sacrifice in vedic religion.</span>
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">Les Origines de la culture</i>. <span lang="fr">entretiens avec Pierpaolo Antonello et João César de Castro Rocha, suivi d’une réponse à Régis Debray sur ses critiques publiées dans Le feu sacré en 2003</span> 2004.
-        <!-- @@ISBN -->
+        <i class="booktitle">Les Origines de la culture</i>. <span lang="fr">Entretiens avec Pierpaolo Antonello et João César de Castro Rocha, suivi d’une réponse à Régis Debray sur ses critiques publiées dans Le feu sacré en 2003</span> 
+        2004. Fayard, 2011
+        <a href="http://www.fayard.fr/les-origines-de-la-culture-9782818502112"><abbr>ISBN</abbr> 9782818502112</a>. 
       </li>
       <li><span lang="fr">Girard, René</span>: 
-        <i class="booktitle">Oedipus Unbound: Selected Writings on Rivalry and Desire</i>, edited by Mark Anspach. Oxford University Press <!-- @@year -->.
-        <!-- @@ISBN -->
+        <i class="booktitle">Oedipus Unbound: Selected Writings on Rivalry and Desire</i>, edited by Mark Anspach. Stanford University Press, 2004.
+        <a href="http://www.sup.org/books/title/?id=5266"><abbr>ISBN</abbr> 9780804747806</a>.
       </li>
       <li><span lang="fr">Girard, René</span>; <span lang="it">Vattimo, Gianni</span>: 
-        <i class="booktitle" lang="et">Verità o fede debole. Dialogo su cristianesimo e relativismo</i>, edited by <span lang="it">P. Antonello. Transeuropa Edizioni</span>, 2006. 
-        <!-- @@ISBN -->
-        <br />French translation:
-        <i class="booktitle" lang="fr">Vérité ou foi faible. Dialogue sur christianisme et relativisme</i> <!-- @@publisher, year -->
+        <i class="booktitle" lang="et">Verità o fede debole? Dialogo su cristianesimo e relativismo</i>, edited by <span lang="it">Pierpaolo Antonello. Transeuropa Edizioni</span>, 2006. 
+        <a href="http://www.transeuropaedizioni.it/dettaglio_libro.php?id_libro=23" hreflang="it"><abbr>ISBN</abbr> 88-7580-018-9</a>.
+        <br />Translations:
+        <ul>
+          <li lang="fr">Girard, René; <span lang="it">Vattimo, Gianni; Antonello, Pierpaolo</span>: 
+            <i class="booktitle">Christianisme et modernité</i>. Flammarion, 2009, 2014.
+            <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=46922"><abbr>ISBN</abbr> 9782081307773</a>. 
+          </li>
+        </ul>
       </li>
       <li lang="fr">Girard, René; Gounelle, André; Houziaux, Alain: 
-        <i class="booktitle">Dieu, une invention ?</i>. <!-- @@publisher --> 2007.
-        <!-- @@ISBN -->
+        <i class="booktitle">Dieu, une invention ?</i>. Ivry-sur-Seine: Les Éditions de l’Atelier, 2007.
+        <a href="http://www.editionsatelier.com//index.php?page=shop.product_details&flypage=bookshop-flypage.tpl&product_id=283&category_id=3&option=com_virtuemart&Itemid=1"><abbr>ISBN</abbr> 9782708239227</a>.
       </li>
       <li lang="fr">Girard, René: 
         <i class="booktitle">De la violence à la divinité</i>. Grasset, 2007.
@@ -273,7 +304,7 @@
         <i class="booktitle">Le Tragique et la Pitié</i>. Le Pommier, 2007.
       </li>
       <li lang="fr">Girard, René; Chantre, Benoît: 
-        <i class="booktitle">Achever Clausewitz</i>. Carnets nord, 2007. Flammarion, 2011.<!-- @@check -->
+        <i class="booktitle">Achever Clausewitz</i>. Carnets nord, 2007. Flammarion, 2011.
         <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=39193"><abbr>ISBN</abbr> 9782081226395</a>. 
       </li>
       <li lang="fr">Girard, René: 
@@ -282,15 +313,11 @@
       <li><span lang="fr">Girard, René</span>: 
         <i class="booktitle">Mimesis and Theory: Essays on Literature and Criticism, 1953-2005</i>. Edited and with an introduction by Robet Doran. 
         Cultural Memory in the Present. Stanford, California: Stanford University Press, 2008.
-        <abbr>ISBN</abbr> 978-0-8047-8107-7.
+        <a href="http://www.sup.org/books/title/?id=10194"><abbr>ISBN</abbr> 978-0-8047-8107-7</a>.
         <br />This is a collection of 20 essays, seven of which were originally written in French.
         The essays cover French authors such as <span lang="fr">Saint-John Perse, Valéry, Stendhal, Simone de Beauvoir,
         Marcel Proust, Jean Racine, Victor Hugo</span> and <span lang="fr">Chrétien de Troyes</span>;
         it also contains essays on Dostoyevsky and Shakespeare.
-      </li>
-      <li lang="fr">Girard, René; <span lang="it">Vattimo, Gianni; Antonello, Pierpaolo</span>: 
-        <i class="booktitle">Christianisme et modernité</i>. Flammarion, 2009, 2014.
-        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=46922"><abbr>ISBN</abbr> 9782081307773</a>. 
       </li>
       <li lang="fr">Girard, René: 
         <i class="booktitle">Géométries du désir</i>. Textes traduits de l'anglais par Mark R. Anspach et Myriam Dennehy. Paris: Éditions de L'Herne, 2010.
