Book: Newston's Apply and Other Myths ...

--- a/science/index.html
+++ b/science/index.html
@@ -117,9 +117,9 @@
     <h2>About Science in General</h2>
     <ul>
       <li>Angier, Natalie: 
-        <a href="http://www.faber.co.uk/9780571239726-the-canon.html" 
-        class="booktitle">The Canon: The Beautiful Basics of Science</a>.
-        Faber &amp; Faber, 2008. (<abbr>ISBN</abbr> 9780571239726; 304 pages).
+        <i class="booktitle">The Canon: The Beautiful Basics of Science</i>.
+        Faber &amp; Faber, 2008. 
+        (<a href="http://www.faber.co.uk/9780571239726-the-canon.html"><abbr>ISBN</abbr> 9780571239726</a>; 304 pages).
         For a list of scientists interviewed by Angier, see the
         <a href="https://en.wikipedia.org/wiki/The_Canon">Wikipedia article
         about the book</a>.
@@ -147,9 +147,9 @@
     <h2>History of Science</h2>
     <ul>
       <li lang="nl"><a href="http://cas.ou.edu/rienk-vermij">Vermij, Rienk</a>: 
-        <a href="http://www.nieuwezijds.nl/Boek/9789057122248/Kleine-geschiedenis-van-de-wetenschap/"
-        class="booktitle">Kleine geschiedenis van de wetenschap</a>.
-        Nieuwezijds, 2005. <abbr>ISBN</abbr> 9789057122248 (278 p.).<br />
+        <i class="booktitle">Kleine geschiedenis van de wetenschap</i>.
+        Nieuwezijds, 2005. 
+        <a href="http://www.nieuwezijds.nl/Boek/9789057122248/Kleine-geschiedenis-van-de-wetenschap/"><abbr>ISBN</abbr> 9789057122248</a> (278 p.).<br />
         <span lang="en">A very readable introduction that focuses on how 
         the world view of (originally) philosophers and (later) scientists 
         evolved and how this changing perspective both gave rise to new
@@ -163,16 +163,14 @@
       </li>
       <li><a href="https://en.wikipedia.org/wiki/William_Cecil_Dampier">Dampier, 
         William Cecil</a>:
-        <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/history-science-and-its-relations-philosophy-and-religion"
-        class="booktitle">A History of Science and its Relations with Philosophy 
-        and Religion</a>. Cambridge University Press, 1948.
-        <abbr>ISBN</abbr> 9780521093668 (576 pages).
+        <i class="booktitle">A History of Science and its Relations with Philosophy 
+        and Religion</i>. Cambridge University Press, 1948.
+        <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/history-science-and-its-relations-philosophy-and-religion"><abbr>ISBN</abbr> 9780521093668</a> (576 pages).
       </li>
       <li>Dampier, William Cecil:
-        <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-general-interest/shorter-history-science"
-        class="booktitle">A Shorter History of Science</a>.
+        <i class="booktitle">A Shorter History of Science</i>.
         Cambridge University Press, 2014.
-        <abbr>ISBN</abbr> 9781107672901 (208 pages; originally published in 1944).
+        <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-general-interest/shorter-history-science"><abbr>ISBN</abbr> 9781107672901</a> (208 pages; originally published in 1944).
       </li>
       <li><span class="booktitle">The Cambridge History of Science</span>:
         <ul>
@@ -208,6 +206,14 @@
           </li>
         </ul>
       </li>
+      <li>Numbers, Ronald L.; Kampourakis, Kostas, ed.: 
+        <i class="booktitle">Newton’s Apple and Other Myths about Science</i>. Harvard University Press, 2015.
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674967984"><abbr>ISBN</abbr> 9780674967984</a>.
+      </li>
+      <!--li><a href="https://www.youtube.com/watch?v=PxkxCSyP60Y">Historical Myths About Science by John L. Heilbro</a>,
+        recording of a speech at Washington and Lee University in March 2014.
+        (John L. Heilbron's lecture starts at 7'54''.)
+      </li-->
       <!-- Mason, Stephen F.: A History of The Sciences. Revised Edition. New York: Collier Books: apparently a "wearisome book": http://www.albany.edu/~scifraud/data/sci_fraud_0270.html -->
       <!-- Armand Marie Leroi: The Lagoon: How Aristotle Invented Science. Bloomsbury, 2014. ISBN 9781408836200. http://www.bloomsbury.com/uk/the-lagoon-9781408836200/ -->
       <!-- René Taton: Histoire générale des sciences (4 volumes). Presses Universitaires de France (PUF), 1995 -->
