List of site updates.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
       intellectuals</a>!
     </p>
 
+    <h2 id="updates">Latest Updates</h2>
+    <ul>
+      <li>December 2015: <a href="humanities/girard_rene.html" lang="fr">René Girard</a>:
+        an exhaustive list of his books and an overview of obituaries and commemorations.
+      </li>
+      <li>November 2015: why we still need <a href="philosophy/index.html">philosophy</a>.
+      </li>
+      <li>November 2015: World Philosophy Day (see below).
+      </li>
+    </ul>
+    
     <h2 id="philoday">World Philosophy Day</h2>
     <p> 
       <abbr>UNESCO</abbr> established the 
@@ -109,6 +120,12 @@
       </li>
     </ul>
 
+    <!-- 
+      * Robert C. Richardson: Evolutionary Psychology as Maladapted Psychology. Bradford, 2010. (A critical look at evolutionary psychology.)
+      * Gisela Kaplan; Lesley Rogers: Gene Worship: Moving Beyond the Nature/ Nurture Debate Over Genes, Brain and Gender. Other Press [?], 2010.
+      * Cordelia Fine: Delusions of Gender: How Our Minds, Society, and Neurosexism Create Difference. W. W. Norton & Company, 2011.
+      * Sally Satel; Scott O. Lilienfeld: Brainwashed: The Seductive Appeal of Mindless Neuroscience. Basic Books, 2015 (rept). 
+    -->
   </main>
 
   <footer>
