Dutch translations; Thiel on Wikipedia; minor edits.

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -28,8 +28,7 @@
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
         <ul>
-          <li class="active"><a href="../humanities/girard_rene.html" lang="fr">René Girard</a>
-          </li>
+          <li class="active"><a href="../humanities/girard_rene.html" lang="fr">René Girard</a></li>
         </ul>
       </li>
     </ul>
@@ -209,7 +208,8 @@
             (Zürich : Benziger, 1987.) Patmos, 2012. 
             <a href="http://www.gruenewaldverlag.de/das-heilige-und-die-gewalt-p-1190.html"><abbr>ISBN</abbr> 978-3-8436-0075-0</a>.
           </li>
-          <li lang="nl"><i class="booktitle">God en geweld. Over de oorsprong van mens en cultuur</i>. Tielt: Lannoo/Mimesis, 1994.
+          <li lang="nl"><i class="booktitle">God en geweld. Over de oorsprong van mens en cultuur</i>. 
+            Vertaald door Michel Perquy. Tielt: Lannoo/Mimesis, 1993.
             <!-- ISBN -->
           </li>
         </ul>
@@ -327,8 +327,9 @@
           <li lang="de"><i class="booktitle">Shakespeare: Theater des Neides</i>. Übersetzt aus dem Englischen von Wiebke Meier. Hanser, 2011.
             <a href="https://www.hanser-literaturverlage.de/buch/shakespeare/978-3-446-23650-9/"><abbr>ISBN</abbr> 978-3-446-23650-9</a>.
           </li>
-          <li lang="nl"><i class="booktitle">Shakespeare: Het schouwspel van de afgunst</i>. Tielt: Lannoo/Mimesis, 1995.
-            <!-- @@year, ISBN -->
+          <li lang="nl"><i class="booktitle">Shakespeare: Het schouwspel van de afgunst</i>. 
+            Vertaald door <a href="http://perquy.net/nl/portfolio-detail/girard-rene/">Michel Perquy</a>. 
+            Tielt: Lannoo/Mimesis, 1995.<!-- ISBN -->
           </li>
         </ul>
       </li>
@@ -613,7 +614,8 @@
         The main part of the article summarises the mimetic theory. 
         <br />Bowyer concludes with a few comments about two  &ldquo;applied Girardians&rdquo;.
         While academic Girardians tend to the political left, the billionaire 
-        Peter Thiel, <!-- @@wikipedia -->who studied with Girard, leans towards libertarianism.
+        <a href="https://en.wikipedia.org/wiki/Peter_Thiel">Peter Thiel</a>, 
+        who studied with Girard, leans towards libertarianism.
         Thiel's book <a href="http://zerotoonebook.com/" class="booktitle">Zero to One</a> is 
         <q>drenched in Girardian insights</q>.
         Bowyer also points out:
