Minor edit in nav list.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       </li>
       <li><a href="./humanities/index.html">Humanities</a>
         <ul>
-          <li><a href="./humanities/girard_rene.html" lang="fr">René Girard</a>
-          </li>
+          <li><a href="./humanities/girard_rene.html" lang="fr">René Girard</a></li>
         </ul>
       </li>
     </ul>
