--- a/science/index.html
+++ b/science/index.html
@@ -410,7 +410,7 @@
     <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
       26 June 2015. 
     </li>
-    <li><a href="http://events.mi.hdm-stuttgart.de/">7th Science Day</a>,
+    <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
       18 December 2015. 
     </li>
   </ul>
