Hegel added to navigation.

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -64,9 +64,9 @@
       &ldquo;logic&rdquo; in Hegel's <i class="booktitle" lang="de">Wissenschaft der Logik</i>
       did not refer to what we now call (formal) logic but was based on the term
       <i>logos</i> from ancient Greek philosophy. Similarly, &ldquo;phenomenology&rdquo;
-      (see <i class="booktitle" lang="de">Phänomenologie des Geistes</i>)<!-- @@wiki -->
+      (see <a href="https://de.wikipedia.org/wiki/Ph%C3%A4nomenologie_des_Geistes"><i class="booktitle" lang="de">Phänomenologie des Geistes</i></a>)
       did not its current meaning, which resulted from the work of
-      <span lang="de">Husserl</span>.<!-- @@wiki -->
+      <a href="https://de.wikipedia.org/wiki/Edmund_Husserl" hreflang="de" lang="de">Edmund Husserl</a>.
     </p>
 
     <h2>Introductions to Hegel</h2>
@@ -111,13 +111,14 @@
         Schnädelbach <span lang="en">points out that Hegel's own introductions to his system
         make certain assumptions that are part of his system, and as a consequence there is no way
         into his system without taking a sort of leap of faith.The author also points out
-        that modern Hegelians have reduced Hegel's dialectic to a hermeneutic circle. <!-- @@wikipedia -->
+        that modern Hegelians have reduced the 
+        <a href="https://en.wikipedia.org/wiki/Dialectic#Hegelian_dialectic">Hegelian dialectic</a> to a 
+        <a href="https://en.wikipedia.org/wiki/Hermeneutic_circle">hermeneutic circle</a>.
         He concludes that Hegel's attempt to create a philosophical system ultimately failed
         and this failure is largely connected to Hegel's stance towards the philosophy of</span> 
-        Immanuel Kant.
+        <a href="https://en.wikipedia.org/wiki/Immanuel_Kant">Immanuel Kant</a>.
       </li>
     </ul>
-
 
   </main>
 
