--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <ul>
       <li class="active"><a href="./index.html">Home</a></li>
       <li><a href="./philscience/index.html">Philosophy of Science</a></li>
-      <li><a href="../philosophy/index.html">Philosophy</a>
+      <li><a href="./philosophy/index.html">Philosophy</a>
         <ul>
-          <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
-          <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li>
-          <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li-->
+          <li><a href="./philosophy/learningphilosophy.html">Learning Philosophy</a></li>
+          <!--li><a href="./philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="./philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
         </ul>
       </li>
       <li><a href="./science/index.html">Science</a>
