--- a/philscience/index.html
+++ b/philscience/index.html
@@ -21,8 +21,8 @@
       <li><a href="../philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
-          <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li>
-          <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li-->
+          <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
         </ul>
       </li>
       <li><a href="../science/index.html">Science</a>
